--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,36 @@
 </head>
 
 <body>
+    <header>
+        <!-- Top Navbar -->
+        <nav class="nav-extended text-shadow blue-grey darken-2">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('get_home') }}" class="brand-logo">The Seed Shelf</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('get_home') }}">Home</a></li>
+                    <li><a href="{{ url_for('get_seeds') }}">Seeds</a></li>
+                    <li><a href="#">Add Seed</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#">Log Out</a></li>
+                    <li><a href="#">Register</a></li>
+                </ul>
+            </div>
+        </nav>
+        
+        <!-- Mobile sidenav -->
+        <ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align light-blue-text text-darken-4">The Seed Shelf</h4></li>
+            <li><a href="{{ url_for('get_home') }}">Home</a></li>
+            <li><a href="{{ url_for('get_seeds') }}">Seeds</a></li>
+            <li><a href="#">Add Seed</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Register</a></li>
+        </ul>
+    </header>
     {% block content %}
 
     {% endblock %}
