--- a/templates/base.html
+++ b/templates/base.html
@@ -21,16 +21,16 @@
         <!-- Top Navbar -->
         <nav class="nav-extended text-shadow blue-grey darken-2">
             <div class="nav-wrapper">
-                <a href="{{ url_for('get_home') }}" class="brand-logo">The Seed Shelf</a>
+                <a href="{{ url_for('home') }}" class="brand-logo">The Seed Shelf</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('get_home') }}">Home</a></li>
-                    <li><a href="{{ url_for('get_seeds') }}">Seeds</a></li>
+                    <li><a href="{{ url_for('home') }}">Home</a></li>
+                    <li><a href="{{ url_for('seeds') }}">Seeds</a></li>
                     <li><a href="#">Add Seed</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,18 +38,33 @@
         <!-- Mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken-4">The Seed Shelf</h4></li>
-            <li><a href="{{ url_for('get_home') }}">Home</a></li>
-            <li><a href="{{ url_for('get_seeds') }}">Seeds</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('seeds') }}">Seeds</a></li>
             <li><a href="#">Add Seed</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
     </header>
-    {% block content %}
 
-    {% endblock %}
+    <section>
+        <!-- Flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                        <h4 class="center-align">{{ message }}</h4>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
