--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
 {% block content %}
-    <h1>hello</h1>
+
+<div class="row">
+    <div class="hero"></div>
+</div>
+
 {% endblock %}
