Add login functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Register</h3>
+    <h3 class="center-align">Log In</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!-- Username -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix"></i>
+                        <i class="fas fa-user-cog prefix"></i>
                         <input id="username" name="username" type="text" minlength="5"
                          maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
@@ -24,17 +24,9 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- Confirm Password -->
+                <!-- Log In Button -->
                 <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-check-circle prefix"></i>
-                        <input id="confirm-password" name="confirm-password" type="password" class="validate" required>
-                        <label for="confirm-password">Confirm Password</label>
-                    </div>
-                </div>
-                <!-- Register Button -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large">Register <i class="fas fa-sign-in-alt"></i></button>
+                    <button type="submit" class="col s12 btn-large">Log In <i class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
         </form>
@@ -42,8 +34,9 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already registered? <a href=" {{ url_for('login') }} ">Log In</a>
+                New to The Seed Shelf? <a href=" {{ url_for('register') }} ">Sign Up Here</a>
             </p>
         </div>
     </div>
+
 {% endblock %}
