--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <li><a href="{{ url_for('seeds') }}">Seeds</a></li>
                     <li><a href="#">Add Seed</a></li>
                     <li><a href="#">Profile</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                 </ul>
@@ -42,7 +42,7 @@
             <li><a href="{{ url_for('seeds') }}">Seeds</a></li>
             <li><a href="#">Add Seed</a></li>
             <li><a href="#">Profile</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
