--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('seeds') }}">Seeds</a></li>
-                        <li><a href="#">Add Seed</a></li>
+                        <li><a href="{{ url_for('add_seed') }}">Add Seed</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
@@ -44,7 +44,7 @@
             <li><a href="{{ url_for('home') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('seeds') }}">Seeds</a></li>
-                <li><a href="#">Add Seed</a></li>
+                <li><a href="{{ url_for('add_seed') }}">Add Seed</a></li>
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
