make minor style changes e.g navbar

--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -6,7 +6,7 @@
             <form class="col s12" method="POST" action="{{ url_for('add_seed') }}">
                 <div class="row">
                     <div class="input-field col s6">
-                        <input placeholder="Seed Name" id="first_name" type="text" class="validate">
+                        <input placeholder="Seed Name" id="seed_name" name="seed_name" type="text" class="validate">
                         <label for="seed_name">Seed Name</label>
                     </div>
                     <div class="input-field col s6">
