--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <!-- Top Navbar -->
-        <nav class="nav-extended text-shadow blue-grey darken-2">
+        <nav class="nav-extended text-shadow light-green">
             <div class="nav-wrapper">
                 <a href="{{ url_for('home') }}" class="brand-logo">The Seed Shelf</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
