--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
 
 <div class="row">
     <div class="hero">
-        <div class="valign-wrapper">
+        <div class="col s6 offset-6">
             <p class="white-text">Here at The Seed Shelf we are passionate about gardening. We want people to be healthier, more sustainable and happier 
             an dwe cant think of a better way to achieve this than sharing our experience and knowledge of gardening. So 
             if you are looking to learn how to grow some delicious fruit or vegetables or want a new plant for your living room 
             you can learn all the skills needed right here.</p>
+            <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn">button</a>
         </div>
     </div>
 </div>
@@ -17,7 +18,7 @@
     <h4 class="center-align">Get Growing</h4>
     <div class="carousel">
     {% for seed in seeds %}
-        <a class="carousel-item" href="#one!"><img src="{{ seed.seed_image }}"></a>
+        <a class="carousel-item" href="{{ url_for('get_seed', seed_id=seed._id) }}"><img src="{{ seed.seed_image }}"></a>
     {% endfor %}
     </div>
     
