add overlay to hero text on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,12 @@
 <div class="row">
     <div class="hero">
         <div class="col s6 offset-6">
-            <p class="white-text">Here at The Seed Shelf we are passionate about gardening. We want people to be healthier, more sustainable and happier 
+            <p class="white-text hero-text">Here at The Seed Shelf we are passionate about gardening. We want people to be healthier, more sustainable and happier 
             an dwe cant think of a better way to achieve this than sharing our experience and knowledge of gardening. So 
             if you are looking to learn how to grow some delicious fruit or vegetables or want a new plant for your living room 
-            you can learn all the skills needed right here.</p>
-            <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn">button</a>
+            you can learn all the skills needed right here.
+            <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn">button</a></p>
+            
         </div>
     </div>
 </div>
