--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,9 +20,26 @@
     background-size: cover;
 }
 
+.hero-text {
+    position: absolute;
+    top: 35%;
+    left: 34%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.seed-card {
+    width: 300px;
+    height: 300px;
+}
+
 .seed-image {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .image-container img {
