add some style and layout elements to grow_seed.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap"); 
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400&display=swap");
+
+body {
+    font-family: "Roboto", sans-serif;
+    height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+p {
+    font-size: 14px;
+}
+
 .text-shadow {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.6);
 }
@@ -31,9 +45,9 @@
     padding-right: 10px;
 }
 
-.seed-card {
-    width: 300px;
-    height: 300px;
+.card.small {
+    height: 200px;
+    width: 200px;
 }
 
 .seed-image {
@@ -42,10 +56,35 @@
     object-fit: cover;
 }
 
+.image-container {
+    display: flex;
+    justify-content: center;
+}
+
 .image-container img {
   object-fit: cover;
-  width:400px;
-  height:400px;
+  width: 300px;
+  height: 300px;
+}
+
+
+.seed-description {
+    width: 80%;
+}
+
+.choice {
+    color: white;
+    width: 70%;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    border-radius: 3px;
+}
+
+.instructions {
+    text-align: center;
 }
 
 
