--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,29 @@ p {
     object-fit: cover;
 }
 
+.flex {
+    display: flex;
+    justify-content: center;
+}
+
+.overlay-card {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+	background-color: rgba(0,0,0,0.5);
+	color: #f1f1f1;
+	transition: 0.6s ease-in-out;
+	opacity: 0;
+	font-size: 20px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.col:hover .overlay-card {
+	opacity: 1;
+}
+
 .image-container {
     display: flex;
     justify-content: center;
