--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,10 @@
 
 <div class="row">
     <div class="hero">
-        <div class="col s6 offset-6">
-            <p class="white-text hero-text">Here at The Seed Shelf we are passionate about gardening. We want people to be healthier, more sustainable and happier 
-            an dwe cant think of a better way to achieve this than sharing our experience and knowledge of gardening. So 
-            if you are looking to learn how to grow some delicious fruit or vegetables or want a new plant for your living room 
-            you can learn all the skills needed right here.
-            <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn">button</a></p>
-            
+        <div class="overlay-hero">
+            <h5>Learn how to grow your vegetables, fruit, herbs and plants.</h5>
+            <h6>Add your own seeds so you can teach others.</h6>
+            <a href="{{ url_for('seeds') }}" class="waves-effect waves-light btn light-green">Find Seeds</a>
         </div>
     </div>
 </div>
