Add footer to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,30 @@
         {% endblock %}
     </main>
 
+    <footer class="container-fluid light-green">
+        <div class="row">
+            <div class="col-12 footer-items">
+                <p class="footer-items">© Copyright - The Seed Shelf</p>
+            </div>
+            <div class="col-12 social-links">
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook aria-hidden icon"></i> <span class="sr-only">Facebook</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram aria-hidden icon"></i> <span class="sr-only">Instagram</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter aria-hidden icon"></i> <span class="sr-only">Twitter</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.reddit.com" target="_blank"><i class="fab fa-reddit aria-hidden icon"></i> <span class="sr-only">Reddit</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
