--- a/static/css/style.css
+++ b/static/css/style.css
@@ -122,4 +122,62 @@ p {
     text-align: center;
 }
 
+/* --------------- Footer --------------- */
+
+footer {
+    height: auto;
+  }
+  
+  .footer-items {
+    margin-bottom: 0;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    justify-content: center;
+  }
+  
+  footer .row {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  
+  .icon {
+    color: #fff;
+    font-size: 20px;
+  }
+  
+  footer .col-4 {
+    text-align: center;
+    align-items: center;
+  }
+  
+  .social-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  footer li {
+      margin-top: 10px;
+      margin-bottom: 10px;
+  }
+  
+  footer a {
+    color: #fff;
+    margin: 10px;
+    text-align: center;
+  }
+  
+  footer p {
+    margin-top: 10px;
+    margin-bottom: 0;
+    color: #fff;
+  }
+  
+  ul.list-inline {
+    margin: 0;
+    display: flex;
+  }
 
