--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="row">
-    <div class="hero">
+    <div class="hero-image">
         <div class="overlay-hero">
             <h5>Learn how to grow your vegetables, fruit, herbs and plants.</h5>
             <h6>Add your own seeds so you can teach others.</h6>
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="site-container">
     <h4 class="center-align">Get Growing</h4>
     <div class="carousel">
     {% for seed in seeds %}
@@ -22,12 +22,12 @@
     
     <h4 class="center-align">Most Recent Seeds</h4>
     <div class="row">
-        {% for seed in seeds %}
+        {% for recent in recents %}
             <div class="col s12 m4 flex">
-                <a href="{{ url_for('get_seed', seed_id=seed._id) }}">
-                <div class="card small s4 seed-card hoverable">
-                    <div class="overlay-card"><h4>{{ seed.seed_name }}</h4></div>
-                    <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
+                <a href="{{ url_for('get_seed', seed_id=recent._id) }}">
+                <div class="card medium s4 seed-card hoverable">
+                    <div class="overlay-card"><h4>{{ recent.seed_name }}</h4></div>
+                    <img class="seed-image" src="{{ recent.seed_image }}" alt="Seed Image">
                 </div>
                 </a>
             </div>
