--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap"); 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400&display=swap");
 
+/* --------------- General --------------- */
 body {
     font-family: "Roboto", sans-serif;
     height: 100%;
@@ -8,8 +9,19 @@ body {
     overflow-x: hidden;
 }
 
+.site-container {
+  max-width: 90%;
+  margin: auto;
+}
+
 p {
     font-size: 14px;
+}
+
+
+.flex {
+  display: flex;
+  justify-content: center;
 }
 
 .text-shadow {
@@ -20,83 +32,64 @@ p {
     line-height: 2;
 }
 
-
-.hero {
-    height: 80vh;
-    width: 100%;
-    color: white;
-    background-image: url(../images/hero.jpg);
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+/* --------------- Images --------------- */
+.hero-image {
+  height: 80vh;
+  width: 100%;
+  color: white;
+  background-image: url(../images/hero.jpg);
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
+.carousel-images {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.seed-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay-card {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
+  color: #f1f1f1;
+  transition: 0.6s ease-in-out;
+  opacity: 0;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.col:hover .overlay-card {
+opacity: 1;
+}
+/* --------------- Index.html --------------- */
 
 .overlay-hero {
     position: absolute;
     height: 100%;
     width: 100%;
-	background-color: rgba(0,0,0,0.3);
+	  background-color: rgba(0,0,0,0.3);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.hero-text {
-    position: absolute;
-    top: 35%;
-    left: 34%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.carousel-images {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-}
-
-.card.small {
-    height: 200px;
-    width: 200px;
-}
-
-.seed-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.flex {
-    display: flex;
-    justify-content: center;
-}
-
-.overlay-card {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-	  background-color: rgba(0,0,0,0.5);
-	  color: #f1f1f1;
-	  transition: 0.6s ease-in-out;
-	  opacity: 0;
-	  font-size: 20px;
-	  display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.col:hover .overlay-card {
-	opacity: 1;
-}
-
+/* --------------- grow_seed.html --------------- */
 .image-container {
    display: flex;
    justify-content: center;
