remove unnecessary classes and change colour of buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,6 @@ p {
     font-size: 14px;
 }
 
-
 .flex {
   display: flex;
   justify-content: center;
@@ -94,6 +93,8 @@ opacity: 1;
     justify-content: center;
     align-items: center;
 }
+
+/* --------------- seeds.html --------------- */
 
 /* --------------- grow_seed.html --------------- */
 .image-container {
