--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -13,9 +13,9 @@
     </div>
     <div class="row">
         <div class="col s12 m6">
-            <div class="choice light-green">Sowing Instructions</div>
-            <div class="choice light-green">Growing Instructions</div>
-            <div class="choice light-green">Harvesting Instructions</div>
+            <div class="choice orange">Sowing Instructions</div>
+            <div class="choice orange">Growing Instructions</div>
+            <div class="choice orange">Harvesting Instructions</div>
         </div>
         <div class="col s12 m6">
             <div id="sowing-instructions">
