--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
                 </div>
                 <!-- Log In Button -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large">Log In <i class="fas fa-sign-in-alt"></i></button>
+                    <button type="submit" class="col s12 btn-large orange">Log In <i class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
         </form>
