--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -19,7 +19,7 @@
             {% for seed in seeds %}
             <div class="col s12 m3 flex">
                 <a href="{{ url_for('get_seed', seed_id=seed._id) }}">
-                <div class="card small s4 seed-card hoverable">
+                <div class="card small s4 hoverable">
                     <div class="overlay-card"><h4>{{ seed.seed_name }}</h4></div>
                     <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                 </div>
