--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,16 @@
     </div>
 </div>
 
-<div class="site-container">
+<div class="container">
     <h4 class="center-align">Get Growing</h4>
-    <div class="carousel">
+    <div class="carousel carousel-slider">
     {% for seed in seeds %}
         <a class="carousel-item" href="{{ url_for('get_seed', seed_id=seed._id) }}"><img class="carousel-images" src="{{ seed.seed_image }}"></a>
     {% endfor %}
     </div>
-    
+</div>
+
+<div class="site-container">
     <h4 class="center-align">Most Recent Seeds</h4>
     <div class="row">
         {% for recent in recents %}
