add edit and delete buttons to grow_seed.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,11 @@ opacity: 1;
 }
 
 /* --------------- grow_seed.html --------------- */
+.edit-buttons{
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
 .image-container {
    display: flex;
    justify-content: center;
