--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -5,7 +5,7 @@
     {% if session.user|lower == seed.created_by|lower %}
         <div class="row edit-buttons">
             <div class="col offset-l10 l1">
-                <a href="#" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
+                <a href="{{ url_for('edit_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
             </div>
             <div class="col l1">
                 <button>
