--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col l1">
                 <button>
-                    <a href="#" class="btn-floating waves-effect waves-light red"><i class="fas fa-trash"></i></a>
+                    <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light red"><i class="fas fa-trash"></i></a>
                 </button>
             </div>
         </div>
