--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col l1">
                 <button>
-                    <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light red"><i class="fas fa-trash"></i></a>
+                    <a data-target="modal1" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
                 </button>
             </div>
         </div>
@@ -56,6 +56,16 @@
             </div>
         </div>
     </div>
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+          <h4 class="center-align">Are you sure?</h4>
+          <p class="center-align">Do you really want to delete this seed?</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-close btn waves-effect red white-text"><i class="far fa-times-circle"></i> Cancel</a>
+          <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="modal-close btn waves-effect green white-text"><i class="far fa-check-circle"></i> Delete</a>
+        </div>
+      </div>
 </div>
 
 {% endblock %}
