--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,5 +10,35 @@
         </div>
     </div>
     
+    <div class="site-container">
+        {% if seeds|length > 0 %}
+            <div class="row">
+                {% for seed in seeds if session.user|lower == seed.created_by|lower %}
+                    <div class="col s12 m4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
+                                <span class="card-title">{{ seed.seed_name }}</span>
+                            </div>
+                            <div class="card-content">
+                                <p>
+                                    <strong>Plant Type:</strong> {{ seed.category_name }}
+                                    <br>
+                                    <strong>Created By:</strong> {{ seed.created_by }}
+                                </p>
+                            </div>
+                            <div>
+                                <a href="{{ url_for('edit_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
+                                <button>
+                                    <a data-target="modal1" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+    
 
 {% endblock %}
