--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -5,24 +5,23 @@
 
         <div class="row card-panel">
             <form action="{{ url_for('search') }}" method="post" class="col s12">
-                <div class="row valign-wrapper center-align">
+                <div class="row search-margin valign-wrapper center-align">
                     <div class="input-field col s12">
                         <i class="fas fa-search prefix"></i>
                         <input type="text" name="query" id="query" class="validate" required>
                         <label for="query">Search Seeds</label>
                     </div>
                 </div>
-                <div class="search-button-container">
-                    <a href="{{ url_for('seeds') }}" class="btn red"><i class="fas fa-redo center-align"></i></a>
-                    <button type="submit" class="btn green search-button"><i class="fas fa-search center-align"></i></button>
-                </div>
-                <label>Browser Select</label>
                 <select name="category_name" id="category_name" class="browser-default">
                     <option value="" disabled selected>Choose your option</option>
                     {% for category in categories %}
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                     {% endfor %}
                 </select>
+                <div class="search-button-container">
+                    <a href="{{ url_for('seeds') }}" class="btn red"><i class="fas fa-redo center-align"></i></a>
+                    <button type="submit" class="btn green search-button"><i class="fas fa-search center-align"></i></button>
+                </div>
             </form>
         </div>
 
