--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
+                                <img class="profile-seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                                 <span class="card-title">{{ seed.seed_name }}</span>
                             </div>
                             <div class="card-content">
