--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -33,7 +33,7 @@
             <div id="sowing-instructions">
                 <h4 class="instructions">Sowing Instructions</h4>
                 <ul>
-                    {% for instructions in seed.sowing_instructions %}
+                    {% for instructions in seed.sowing_instructions.splitlines() %}
                     <li><i class="fas fa-hand-holding-water"></i> {{ instructions }}</li>
                     {% endfor %}
                 </ul>
@@ -41,7 +41,7 @@
             <div id="growing-instructions">
                 <h4 class="instructions">Growing Instructions</h4>
                 <ul>
-                    {% for instructions in seed.growing_instructions %}
+                    {% for instructions in seed.growing_instructions.splitlines() %}
                     <li><i class="fas fa-seedling"></i> {{ instructions }}</li>
                     {% endfor %}
                 </ul>
@@ -49,7 +49,7 @@
             <div id="harvesting-instructions">
                 <h4 class="instructions">Harvesting Instructions</h4>
                 <ul>
-                    {% for instructions in seed.harvesting_instructions %}
+                    {% for instructions in seed.harvesting_instructions.splitlines() %}
                     <li><i class="fas fa-carrot"></i> {{ instructions }}</li>
                     {% endfor %}
                 </ul>
