remove requires attribute from search bar

--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -8,7 +8,7 @@
                 <div class="row search-margin valign-wrapper center-align">
                     <div class="input-field col s12">
                         <i class="fas fa-search prefix"></i>
-                        <input type="text" name="query" id="query" class="validate" required>
+                        <input type="text" name="query" id="query" class="validate">
                         <label for="query">Search Seeds</label>
                     </div>
                 </div>
