--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,10 @@ body {
     overflow-x: hidden;
 }
 
+h1,h2,h3,h4 {
+  font-family: "Roboto Mono", sans-serif;
+}
+
 main {
   flex: 1 0 auto;
 }
@@ -21,7 +25,8 @@ main {
 }
 
 p {
-    font-size: 14px;
+  font-size: 18px;
+  margin-top: 0;
 }
 
 .flex {
@@ -52,6 +57,17 @@ p {
   background-size: cover;
 }
 
+.image-container {
+  display: flex;
+  justify-content: center;
+}
+
+.image-container img {
+ object-fit: cover;
+ width: 300px;
+ height: 300px;
+}
+
 .carousel-images {
   width: 300px;
   height: 300px;
@@ -61,6 +77,12 @@ p {
 .seed-image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+
+.grow-seed img {
+  width: 350px;
+  height: 350px;
   object-fit: cover;
 }
 
@@ -120,18 +142,6 @@ opacity: 1;
   margin-bottom: 0;
 }
 
-.image-container {
-   display: flex;
-   justify-content: center;
-}
-
-.image-container img {
-  object-fit: cover;
-  width: 300px;
-  height: 300px;
-}
-
-
 .seed-description {
     width: 80%;
 }
@@ -147,8 +157,13 @@ opacity: 1;
     border-radius: 3px;
 }
 
-.instructions {
+.instructions h4 {
     text-align: center;
+}
+
+.instructions li {
+  font-size: 16px;
+  line-height: 27px;
 }
 
 /* --------------- Footer --------------- */
