--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -16,43 +16,41 @@
     {% endif %}
     <h3 class="center-align">{{ seed.seed_name }}</h3>
     <div class="row">
+        <div class="col s12 m6 grow-seed">
+            <img src="{{ seed.seed_image }}" alt="Seed Image">
+        </div>
         <div class="col s12 m6">
             <p class="seed-description">{{ seed.seed_description }}</p>
-        </div>
-        <div class="col s12 m6 image-container">
-            <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
+            <p>Created by: {{ seed.created_by }}</p>
         </div>
     </div>
-    <div class="row">
-        <div class="col s12 m6">
-            <div class="choice orange">Sowing Instructions</div>
-            <div class="choice orange">Growing Instructions</div>
-            <div class="choice orange">Harvesting Instructions</div>
-        </div>
-        <div class="col s12 m6">
-            <div id="sowing-instructions">
-                <h4 class="instructions">Sowing Instructions</h4>
-                <ul>
-                    {% for instructions in seed.sowing_instructions.splitlines() %}
-                    <li><i class="fas fa-hand-holding-water"></i> {{ instructions }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div id="growing-instructions">
-                <h4 class="instructions">Growing Instructions</h4>
-                <ul>
-                    {% for instructions in seed.growing_instructions.splitlines() %}
-                    <li><i class="fas fa-seedling"></i> {{ instructions }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div id="harvesting-instructions">
-                <h4 class="instructions">Harvesting Instructions</h4>
-                <ul>
-                    {% for instructions in seed.harvesting_instructions.splitlines() %}
-                    <li><i class="fas fa-carrot"></i> {{ instructions }}</li>
-                    {% endfor %}
-                </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col s12 instructions">
+                <div id="sowing-instructions">
+                    <h4>Sowing Instructions</h4>
+                    <ul>
+                        {% for instructions in seed.sowing_instructions.splitlines() %}
+                        <li><i class="fas fa-hand-holding-water"></i> {{ instructions }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div id="growing-instructions">
+                    <h4>Growing Instructions</h4>
+                    <ul>
+                        {% for instructions in seed.growing_instructions.splitlines() %}
+                        <li><i class="fas fa-seedling"></i> {{ instructions }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div id="harvesting-instructions">
+                    <h4>Harvesting Instructions</h4>
+                    <ul>
+                        {% for instructions in seed.harvesting_instructions.splitlines() %}
+                        <li><i class="fas fa-carrot"></i> {{ instructions }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
