--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,7 @@ main {
 
 p {
   font-size: 18px;
-  margin-top: 0;
+  margin: 0;
 }
 
 .flex {
@@ -40,6 +40,16 @@ p {
 
 .flashed h4 {
     line-height: 2;
+}
+
+/* --------------- Navbar --------------- */
+
+.logo {
+  position: absolute;
+  color: #fff;
+  display: inline-block;
+  font-size: 2.1rem;
+  padding-left: 20px;
 }
 
 /* --------------- Images --------------- */
@@ -119,6 +129,11 @@ opacity: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.overlay-hero a {
+  margin-top: 10px;
+  border-radius: 10px;
 }
 
 /* --------------- seeds.html --------------- */
