--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,11 @@ h1,h2,h3,h4 {
   font-family: "Roboto Mono", sans-serif;
 }
 
+hr {
+  border-top: solid;
+    color: black;
+}
+
 main {
   flex: 1 0 auto;
 }
@@ -155,10 +160,6 @@ opacity: 1;
 .edit-buttons{
   margin-top: 10px;
   margin-bottom: 0;
-}
-
-.seed-description {
-    width: 80%;
 }
 
 .choice {
