--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <!-- Top Navbar -->
         <nav class="nav-extended light-green">
             <div class="nav-wrapper">
-                <a href="{{ url_for('home') }}" class="brand-logo">The Seed Shelf</a>
+                <a href="{{ url_for('home') }}" class="logo">The Seed Shelf</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
