add some styling to grow_seed.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,6 +95,11 @@ p {
   object-fit: cover;
 }
 
+.grow-seed {
+  display: flex;
+  justify-content: center;
+}
+
 .grow-seed img {
   width: 350px;
   height: 350px;
