add unfinished cantact page

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
                         <li><a href="{{ url_for('login') }}">Log In</a></li>
                         <li><a href="{{ url_for('register') }}">Register</a></li>
                     {% endif %}
+                    <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
