--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,9 +192,13 @@ opacity: 1;
 footer {
     height: auto;
     margin-bottom: 0;
-  }
+}
+
+.footer {
+  display: flex;
+}
   
-  .footer-items {
+.footer-items {
     margin-bottom: 0;
     font-size: 16px;
     display: flex;
@@ -203,6 +207,21 @@ footer {
     text-align: center;
     justify-content: center;
   }
+
+.footer-items form {
+  display: flex;
+  width: 60%;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 0 20px;
+}
+
+.footer-items button {
+  border: none;
+  background-color: #fff;
+  border-radius: 20px;
+  padding-left: 20px;
+}
   
   footer .row {
     margin-left: 15px;
@@ -221,8 +240,8 @@ footer {
   
   .social-links {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
   
   footer li {
