add general styling to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,7 @@
     <footer class="container-fluid light-green">
         <div class="row footer">
             <div class="col s12 m6 footer-items">
+                <p>Sign up for our weekly newsletter</p>
                 <form id="contactForm" onsubmit="return sendMail(this);">
                     <input type="email" name="email" id="emailaddress" placeholder="Email Address" class="form-control" required />
                     <button type="submit" id="send-button"><i class="far fa-paper-plane"></i></button>    
