--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,17 +196,19 @@ footer {
 
 .footer {
   display: flex;
+  align-items: center;
+  margin-bottom: 0;
 }
   
 .footer-items {
-    margin-bottom: 0;
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   }
+
+.footer-items i {
+  font-size: 25px;
+}
 
 .footer-items form {
   display: flex;
@@ -214,6 +216,7 @@ footer {
   background-color: #fff;
   border-radius: 20px;
   padding: 0 20px;
+  margin-bottom: 10px;
 }
 
 .footer-items button {
@@ -231,11 +234,6 @@ footer {
   .icon {
     color: #fff;
     font-size: 20px;
-  }
-  
-  footer .col-4 {
-    text-align: center;
-    align-items: center;
   }
   
   .social-links {
